--- a/package.json
+++ b/package.json
@@ -4,12 +4,15 @@
   "description": "A basic typescript app starter",
   "main": "index.js",
   "scripts": {
+    "start:dev": "nodemon",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "prem",
   "license": "ISC",
   "devDependencies": {
     "@types/node": "^18.11.9",
+    "nodemon": "^2.0.20",
+    "ts-node": "^10.9.1",
     "typescript": "^4.8.4"
   }
 }
