--- a/package.json
+++ b/package.json
@@ -4,15 +4,14 @@
   "description": "A basic typescript app starter",
   "main": "index.js",
   "scripts": {
-    "start:dev": "nodemon",
+    "start:dev": "tsx watch ./src/index.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "prem",
   "license": "ISC",
   "devDependencies": {
     "@types/node": "^20.10.8",
-    "nodemon": "^3.0.2",
-    "ts-node": "^10.9.2",
+    "tsx": "^4.19.1",
     "typescript": "^5.3.3"
   }
 }
